@@ -55,7 +55,7 @@
         <version>3.8.1</version>
         <configuration>
           <compilerArgs>
-            <arg>--enable-preview</arg>
+            <!--<arg>enable-preview</arg>-->
           </compilerArgs>
         </configuration>
       </plugin>
